@@ -3,6 +3,8 @@ munin (CVS)
   * Node: munin-node didn't treat default_plugin_user properly (Deb#295366).
   * Plugins: linux/if* now treats ra* interfaces as wireless.
   * Plugins: minor bugfix in generic/bind9.
+  * Plugins: generic/sendmail_mailqueue handles bigger queues (fix by Mickey
+    Everts).
   * Installation: Create CIGdir if nonexistant.
 
 munin (1.2.0rc2)
